# forms-skills

./: .gitignore  CONTRIBUTING.md
skills/aem/forms/: README.md  pyproject.toml
skills/aem/forms/.claude-plugin/: plugin.json
skills/aem/forms/forms-orchestrator/: SKILL.md
skills/aem/forms/forms-orchestrator/assets/: guidelines.md  routing-table.md
skills/aem/forms/forms-orchestrator/references/domain-registry/assets/: skills-catalog.md
skills/aem/forms/forms-orchestrator/scripts/: _resolve-workspace  api-manager  eds-code-sync  form-sync  git-sandbox  parse-functions  python3  rule-grammar  rule-save  rule-transform  rule-validate  setup.sh
skills/aem/forms/forms-orchestrator/scripts/api_manager/: __init__.py  aem_client.py  cli.py  config.py  exceptions.py  generator.py  markdown_writer.py  openapi_parser.py  openapi_writer.py  parser.py
skills/aem/forms/forms-orchestrator/scripts/api_manager/templates/: api-client.js.j2  index.js.j2
skills/aem/forms/forms-orchestrator/scripts/api_manager/tests/: test_body_structure.py
skills/aem/forms/forms-orchestrator/scripts/rule_coder/: __init__.py
skills/aem/forms/forms-orchestrator/scripts/rule_coder/bridge/: package-lock.json  package.json
skills/aem/forms/forms-orchestrator/scripts/rule_coder/components/: README.md  __main__.py
skills/aem/forms/forms-orchestrator/scripts/rule_coder/context/: __init__.py  component_lookup.py  form_context.py  (+1 more)
skills/aem/forms/skills/: SKILL.md
skills/aem/forms/skills/assets/: guidelines.md  routing-table.md
skills/aem/forms/tests/: test_plugin_structure.sh
(+72 files in other folders)
