[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aem-forms-skills"
version = "0.1.0"
description = "CLI tools for AEM Forms Skills plugin"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0",
    "PyYAML>=6.0.0",
    "Jinja2>=3.0.0",
    "apispec>=6.0.0",
    "openapi-spec-validator>=0.7.0",
    "PyGithub>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
form-sync = "form_sync.cli:cli"
eds-code-sync = "eds_code_sync.cli:cli"
api-manager = "api_manager.cli:cli"
git-sandbox = "git_sandbox.cli:cli"

[tool.setuptools.packages.find]
where = [
    "forms-orchestrator/scripts",
    "forms-orchestrator/references/domain-registry/references/build/references/create-form/scripts",
    "forms-orchestrator/references/domain-registry/references/build/references/scaffold-form/scripts",
    "forms-orchestrator/references/domain-registry/references/infra/references/sync-forms/scripts",
    "forms-orchestrator/references/domain-registry/references/infra/references/sync-eds-code/scripts",
    "forms-orchestrator/references/domain-registry/references/infra/references/git-sandbox/scripts",
    "forms-orchestrator/references/domain-registry/references/integration/references/manage-apis/scripts",
]
